--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -1,12 +1,23 @@
 .navbar {
+    width: 100%;
+    position: fixed;
+    top: 0;
+    background-color: white;
     height: 60px;
     border-bottom: 1px solid var(--border-color);
     box-shadow: 0 4px 8px 0 rgba(164, 119, 119, 0.682);
     border-radius: 4px;
+
     .container {
         height: 100%;
         display: flex;
         align-items: center;
         justify-content: space-between;
+    }
+
+    .right-side {
+        display: flex;
+        gap: 20px;
+        align-items: center;
     }
 }
