--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -17,7 +17,13 @@
 
     .right-side {
         display: flex;
-        gap: 20px;
+        gap: 10px;
         align-items: center;
+
+        .logout {
+            display: flex;
+            justify-content: center;
+            font-size: 1.5rem;
+        }
     }
 }
