--- a/src/components/profile/Profile.scss
+++ b/src/components/profile/Profile.scss
@@ -40,6 +40,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        gap: 40px;
     }
 
     .follow, .update-profile {
