--- a/src/components/profileDetails/ProfileDetails.scss
+++ b/src/components/profileDetails/ProfileDetails.scss
@@ -6,11 +6,30 @@
 
     .left-part {
         flex: 1;
+        text-align: center;
 
-        .profile-img {
-            width: 140px;
-            height: 14 0px;
-            border-radius: 50%;
+        .profile-img-section {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            .labelImg {
+                width: 80px;
+                height: 80px;
+                border-radius: 50%;
+                border: 2px dashed var(--accent-color);
+                cursor: pointer;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 50%;
+                    object-fit: cover;
+                }
+            }
+            .userImg {
+                display: none;
+            }
         }
     }
 
