likes unlines added

--- a/src/components/post/Post.scss
+++ b/src/components/post/Post.scss
@@ -28,9 +28,23 @@
             display: flex;
             align-items: center;
             gap: 2px;
+            cursor: pointer;
 
             .icon {
                 font-size: 2rem;
+            }
+
+            .animated {
+                animation: beat .15s linear;
+            }
+
+            @keyframes beat {
+                from {
+                    transform: scale(1);
+                }
+                to {
+                    transform: scale(1.2);
+                }
             }
         }
 
